@@ -7,14 +7,14 @@
     <version>2.1.0-BETA-14</version>
   </parent>
   <artifactId>sgv2-jsonapi</artifactId>
-  <version>1.0.15-SNAPSHOT</version>
+  <version>1.0.16-SNAPSHOT</version>
   <properties>
     <stargate.version>${project.parent.version}</stargate.version>
     <!-- 17-May-2023, tatu: [json-api#172] Need at least Jackson 2.15.x -->
-    <!-- 16-Nov-2023, tatu: but may use 2.16 now that it's available -->
-    <jackson.version>2.16.2</jackson.version>
-    <!-- 09-Jul-2024, tatu: temporary override here until SG 2.0.28 -->
-    <quarkus.platform.version>3.9.5</quarkus.platform.version>
+    <!-- 16-Aug-2024, tatu: Quarkus depends on 2.17 already, but keep explicit -->
+    <jackson.version>2.17.2</jackson.version>
+    <!-- 14-Aug-2024, tatu: override here until Stargate gets to this version too -->
+    <quarkus.platform.version>3.13.2</quarkus.platform.version>
     <wiremock.version>3.4.2</wiremock.version>
     <failsafe.useModulePath>false</failsafe.useModulePath>
     <!-- Please update github workflows that build docker images if changing image/additional tags -->
@@ -303,109 +303,6 @@
   </build>
   <profiles>
     <profile>
-      <!-- This profile needs to be activated while working with offline mode related files such as FileWriterSession.java -->
-      <id>offline</id>
-      <repositories>
-        <repository>
-          <id>artifactory</id>
-          <url>https://repo.datastax.com/dse</url>
-          <releases>
-            <enabled>true</enabled>
-          </releases>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-        </repository>
-      </repositories>
-      <dependencies>
-        <dependency>
-          <groupId>com.datastax.dse</groupId>
-          <artifactId>dse-db-all</artifactId>
-          <version>${cassandra.version}</version>
-        </dependency>
-      </dependencies>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M6</version>
-            <configuration>
-              <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/jdk.internal.module=ALL-UNNAMED --add-exports java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-exports java.base/jdk.internal.perf=ALL-UNNAMED --add-exports java.base/sun.nio.ch=ALL-UNNAMED --add-exports java.management.rmi/com.sun.jmx.remote.internal.rmi=ALL-UNNAMED --add-exports java.rmi/sun.rmi.registry=ALL-UNNAMED --add-exports java.rmi/sun.rmi.server=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens java.base/java.lang.module=ALL-UNNAMED --add-opens java.base/java.net=ALL-UNNAMED --add-exports jdk.naming.dns/com.sun.jndi.dns=java.naming --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED</argLine>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>com.spotify.fmt</groupId>
-            <artifactId>fmt-maven-plugin</artifactId>
-            <version>2.23</version>
-            <executions>
-              <execution>
-                <phase>process-sources</phase>
-                <goals>
-                  <goal>check</goal>
-                </goals>
-              </execution>
-            </executions>
-            <configuration>
-              <sourceDirectory>src/main/java</sourceDirectory>
-              <testSourceDirectory>src/test/java</testSourceDirectory>
-              <additionalSourceDirectories>
-                <param>src/main/offline</param>
-                <param>src/test/offline</param>
-              </additionalSourceDirectories>
-            </configuration>
-          </plugin>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>build-helper-maven-plugin</artifactId>
-            <version>3.2.0</version>
-            <executions>
-              <execution>
-                <id>add-source</id>
-                <phase>generate-sources</phase>
-                <goals>
-                  <goal>add-source</goal>
-                </goals>
-                <configuration>
-                  <sources>
-                    <source>src/main/java/</source>
-                    <source>src/main/offline/</source>
-                  </sources>
-                </configuration>
-              </execution>
-              <execution>
-                <id>add-test-source</id>
-                <phase>generate-test-sources</phase>
-                <goals>
-                  <goal>add-test-source</goal>
-                </goals>
-                <configuration>
-                  <sources>
-                    <source>src/test/java/</source>
-                    <source>src/test/offline/</source>
-                  </sources>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-      <distributionManagement>
-        <repository>
-          <uniqueVersion>false</uniqueVersion>
-          <id>stargate-central</id>
-          <name>stargate-releases</name>
-          <url>https://repo.datastax.com/artifactory/stargate-private</url>
-        </repository>
-        <snapshotRepository>
-          <uniqueVersion>false</uniqueVersion>
-          <id>stargate-snapshots</id>
-          <name>stargate-snapshots</name>
-          <url>https://repo.datastax.com/artifactory/stargate-private</url>
-        </snapshotRepository>
-      </distributionManagement>
-    </profile>
-    <profile>
       <id>dse69-it</id>
       <activation>
         <property>
@@ -436,4 +333,18 @@
       </properties>
     </profile>
   </profiles>
+  <distributionManagement>
+    <repository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>stargate-central</id>
+      <name>stargate-releases</name>
+      <url>https://repo.datastax.com/artifactory/stargate-private</url>
+    </repository>
+    <snapshotRepository>
+      <uniqueVersion>false</uniqueVersion>
+      <id>stargate-snapshots</id>
+      <name>stargate-snapshots</name>
+      <url>https://repo.datastax.com/artifactory/stargate-private</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
